# c2s2-example-build-system

./: CMakeLists.txt  README.md  example.cxx
Math/: CMakeLists.txt  ExampleMath.cxx  ExampleMath.h
